BGE: Children objects not freed after python acces. #40475

Closed
opened 2014-06-03 00:29:23 +02:00 by Guillaume BRUN · 10 comments

Blender Version
Broken: 2.70a (could not test 2.71)

Short description of error
Blender crashes suddenly when starting game (PKEY) or at random while playing

Exact steps for others to reproduce the error
Use the attached .blend file .

Start the game, play a bit (W-S control the prop), escape to quit, then start again and play a bit more. Crash should occur within 3 minutes, sometimes instantly - some other times when STOPPING the game with esc.

Additional info
scenegraph node was null. They'll see it at once
lazy solution is to just add a NULL check
but ideally we want to know why that pointer is nulled out

**Blender Version** Broken: 2.70a (could not test 2.71) **Short description of error** Blender crashes suddenly when starting game (PKEY) or at random while playing **Exact steps for others to reproduce the error** Use the [attached .blend file ](https://developer.blender.org/file/info/PHID-FILE-by7242uc6mytzhnp73qq/). Start the game, play a bit (W-S control the prop), escape to quit, then start again and play a bit more. Crash should occur within 3 minutes, sometimes instantly - some other times when STOPPING the game with esc. **Additional info** <psy-fi> scenegraph node was null. They'll see it at once <psy-fi> lazy solution is to just add a NULL check <psy-fi> but ideally we want to know why that pointer is nulled out
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cheaterman

Added subscriber: @Cheaterman
Mitchell Stokes was assigned by Antonis Ryakiotakis 2014-06-03 00:33:12 +02:00

There is something strange going on with our Python interface not properly freeing/releasing objects. For now, it appears changing airflow_deflect to this (change how own.children is used):

import GameLogic

#import mathutils


def airflow_deflect(obj, plane):
	if 'deflect_size' in plane:
		plane_normal = plane.worldOrientation.copy()
		plane_normal.invert()
		plane_normal = plane_normal[2]
		
		relpos = plane.position - obj.position
		vel = obj.getVelocity(relpos).copy()
		
		factor = (vel * plane_normal) * plane["deflect_size"]

		if 'deflect_scaling' in obj:
			factor *= obj["deflect_scaling"]
		obj.applyImpulse(relpos, plane_normal*-factor)
		
	#applyForce(obj, relpos, plane_normal*factor)
		

cont = GameLogic.getCurrentController()
own = cont.owner

#children = own.children

if own.name == 'Cube':
	own['speed'] = -(own.getLinearVelocity(True)[1] * 3.6)

for child in own.children:
	airflow_deflect(own, child)

works around the issue. I'll need to talk Campbell about this the next time I see him.

There is something strange going on with our Python interface not properly freeing/releasing objects. For now, it appears changing airflow_deflect to this (change how own.children is used): ``` import GameLogic ``` #import mathutils ``` def airflow_deflect(obj, plane): if 'deflect_size' in plane: plane_normal = plane.worldOrientation.copy() plane_normal.invert() plane_normal = plane_normal[2] relpos = plane.position - obj.position vel = obj.getVelocity(relpos).copy() factor = (vel * plane_normal) * plane["deflect_size"] if 'deflect_scaling' in obj: factor *= obj["deflect_scaling"] obj.applyImpulse(relpos, plane_normal*-factor) ``` #applyForce(obj, relpos, plane_normal*factor) ``` cont = GameLogic.getCurrentController() own = cont.owner ``` #children = own.children ``` if own.name == 'Cube': own['speed'] = -(own.getLinearVelocity(True)[1] * 3.6) for child in own.children: airflow_deflect(own, child) ``` works around the issue. I'll need to talk Campbell about this the next time I see him.
Member

Added subscribers: @ideasman42, @brita

Added subscribers: @ideasman42, @brita
Member

asking campbell about this then :)

asking campbell about this then :)

Added subscriber: @panzergame

Added subscriber: @panzergame

it's very odd, the following code create the temporary (it's free at the blender close) memory leak:

from bge import *
import sys
		
def dsthsftghjdyh():
	pass

cont = logic.getCurrentController()
own = cont.owner
children = own.children
ex = [0, 2, 5]

print(sys.getrefcount(children))
print(sys.getrefcount(ex))

but if you remove the function all works, like in :

from bge import *
import sys

cont = logic.getCurrentController()
own = cont.owner
children = own.children
ex = [0, 2, 5]

print(sys.getrefcount(children))
print(sys.getrefcount(ex))

I think that's a python reference count bug. @ideasman42: Do you have an idea ?

it's very odd, the following code create the temporary (it's free at the blender close) memory leak: ``` from bge import * import sys def dsthsftghjdyh(): pass cont = logic.getCurrentController() own = cont.owner children = own.children ex = [0, 2, 5] print(sys.getrefcount(children)) print(sys.getrefcount(ex)) ``` but if you remove the function all works, like in : ``` from bge import * import sys cont = logic.getCurrentController() own = cont.owner children = own.children ex = [0, 2, 5] print(sys.getrefcount(children)) print(sys.getrefcount(ex)) ``` I think that's a python reference count bug. @ideasman42: Do you have an idea ?
Mitchell Stokes was unassigned by Porteries Tristan 2015-10-28 22:45:44 +01:00
Porteries Tristan self-assigned this 2015-10-28 22:45:44 +01:00
Porteries Tristan changed title from BGE crashes without displaying any error to BGE: Children objects not freed after python acces. 2015-10-28 22:47:23 +01:00
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Member

This task is being closed because the BGE has been removed in Blender 2.8.

This task is being closed because the BGE has been removed in Blender 2.8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40475
No description provided.