UPBGE: Fix T40475: children list owned by python and not freed.

Now children python list don't manage anymore reference count on theirs items, by doing this it let python free the list when it want.